shaku_derive/tests/ui/provider_attributes.stderr
error: Providers cannot have attributes
  --> $DIR/provider_attributes.rs:15:22
   |
15 |         providers = [#[lazy] ProviderImpl]
   |                      ^
